--- a/28.md
+++ b/28.md
@@ -2,7 +2,7 @@ I'm a bit tired of using loops to print an array,
 
 Java has a function called `toString`, it takes your array as an argument, and it returns a string that we can print.
 
-![截屏2023-09-24 14.14.14](https://aliyun-oss-lpj.oss-cn-qingdao.aliyuncs.com/images/by-clipboard/截屏2023-09-24 14.14.14.png)
+![toString](https://aliyun-oss-lpj.oss-cn-qingdao.aliyuncs.com/images/by-clipboard/toString.png)
 
 ### Updating Arrays
 
@@ -24,7 +24,7 @@ String[] menu = { "Espresso", "Iced Coffee", "Latte" };
 String[] newMenu = new String[5];
 ```
 
-![截屏2023-09-24 14.12.51](https://aliyun-oss-lpj.oss-cn-qingdao.aliyuncs.com/images/by-clipboard/截屏2023-09-24 14.12.51.png)
+![newMenu](https://aliyun-oss-lpj.oss-cn-qingdao.aliyuncs.com/images/by-clipboard/newMenu.png)
 
 ```java
 for (int i = 0; i < menu.length; i++) {
