--- a/1.md
+++ b/1.md
@@ -10,7 +10,7 @@
 
 ## Roadmap
 
-1. Install a JDK(Java Development Kit) on your machine => from Amazon Corretto
+1. Install a JDK(Java Development Kit) on your machine => from Amazon Corretto is recomended.
 
 	Amazon Corretto is just a distribution which once installed, does the work of setting up a JDK on your machine.
 	Basically all you need to do is install it and it's going to do the heavy lifting.
@@ -38,14 +38,8 @@
 	// In java, you must write all of your code in a class.
 	// And the ClassName needs to be the same as your FileName.
 	// So here we create a class.
-	public class HelloJava {
+	class HelloJava {
 	}
-	
-	/* Notice:
-		the [public] exposes current class to other classes that may exist inside your workspace,
-		but since now we have only one class,
-		so it's optional.
-	*/
 	```
 	
 	All right, so what's next is the `main()` method, which is the entry point of a Java application.
@@ -53,16 +47,17 @@
 	And inside main, we're going to print the message "Hello Java"
 	
 	```java
-	public class HelloJava {
-		public static void main(String[] args) {
-			System.out.println("Hello Java");
-		}
+	class HelloJava {
+        // not understand this line is doesn't matter now.
+	    public static void main(String[] args) {
+	        System.out.println("Hello Java");
+	    }
 	}
 	
 	/* Notice:
-		the semicolon is really important, which means end of statement.
-		every statement in Java, every line of code, needs a semicolon at the end.
-		so if you forget your semicolon, your code is not gonna run.
+        the semicolon is really important, which means end of statement.
+        every statement in Java, every line of code, needs a semicolon at the end.
+        so if you forget your semicolon, your code is not gonna run.
 	*/
 	```
 	
