--- a/3.md
+++ b/3.md
@@ -14,11 +14,11 @@ long population = 7000000000L;
 long population = 7_000_000_000L;
 ```
 
-思考一下：为什么要在 7000000000 这个数后面加个 L ？
+为什么要在 7000000000 这个数后面加个 L ？
 
-如果你不加 L，那么 Java 就只会看到这是一个很大的数，它并不知道你这个开发者要将这个数存到什么地方，所以 Java 就会向你抱怨：“你怎么写了这么大的一个数 ？！！！”
+如果你不加 L，那么 Java 就只会看到这是一个很大的数，它并不知道你这个傻乎乎的开发者要将这个数存到什么地方，所以 Java 就慌了
 
-因此，你只需在这个数后面加个 L 来告诉 Java：“放松啦～ 咱们要存的地方存得下这个数的。”，然后 Java 就平静了。
+因此，你只需在这个数后面加个 L 来告诉 Java：“放松啦～ 咱们要存的地方存得下这个数的。”，然后 Java 就平静了
 
 ### Type: double
 
@@ -27,6 +27,8 @@ We can use `double` variables to store decimal numbers, which are given so much 
 ```java
 double percentage = 55.7;
 ```
+
+### Be careful !!!
 
 Avoid just using integers for math calculations,
 
