--- a/4.md
+++ b/4.md
@@ -7,19 +7,11 @@ We can use the type `String` to store text.
 String sentence = "Hello world !";
 ```
 
-If you want to update String varibles, just let the variable equals to a new value.
-
-```java
-sentence = "Good morning !";
-```
-
-String unlike int in memory, 
+String unlike `int` in memory, 
 
 no matter what you store in the integer variable, it's always 4 bytes,
 
-but with String, empty text alone takes up 24 bytes,
-
-and the more text that you add to a string, the more memory it takes up.
+but with String, empty text alone takes up 24 bytes, and the more text that you add to a string, the more memory it takes up.
 
 ---
 
