--- a/5.md
+++ b/5.md
@@ -36,10 +36,14 @@ There are 6 core data types (we didn't cover `boolean` yet).
 | int       | Whole numbers            | 4                                | From: -2147483648 To: 2147483647                   |
 | long      | Very large whole numbers | 8                                | From: -9223372036854775808 To: 9223372036854775807 |
 | double    | Decimals                 | 8                                | Decimal can reach 15 significant digits            |
-| char      | A single character       | 2                                | -                                                  |
 | String    | Text                     | Varies, 24 bytes for empty text. | -                                                  |
+| char      | A single character       | 2                                | -                                                  |
 
 平时开发我基本不使用 `byte, short, float`
 
 See you in workbook 2.2
+
+### 补充知识
+
+在以二进制存储数据的计算机中，浮点数存在误差 ！=> https://liupj.top/2021/08/31/01/
 
