--- a/6.md
+++ b/6.md
@@ -1,9 +1,9 @@
 
 ## Math operators
 
-So far you've learned about: `int`、`long`、`double`、`char`、`String`.
+So far you've learned about: `int`、`long`、`double`、`String` and `char`.
 
-You can use math operators shown as below to play with these values.
+Now, you can use math operators shown as below to play with these values.
 
 `+, -, *, /, %, ++, --, +=, -=, ...`
 
