--- a/13.md
+++ b/13.md
@@ -1,5 +1,5 @@
 
-## Comparison Operators
+### Comparison Operators
 
 `>`, Greater than, returns `true` if the value on the left is greater than the value on the right.
 
@@ -27,6 +27,7 @@ str1.equals(str2);  // true
 !str1.equals(str2); // false
 ```
 
-<!-- You should know about how memory is being allocated. but 目前老师并没有讲 -->
+You should know about how memory is being allocated. but 目前老师并没有讲
 
 See you in workbook 3.1
+
