--- a/15.md
+++ b/15.md
@@ -1,5 +1,5 @@
 
-## Logical Operators
+### Logical Operators
 
 We can use logical operators to make our conditionals a little more complex.
 
@@ -24,3 +24,4 @@ There are 3 types of logical operators,
 ---
 
 See you in workbook 3.5
+
