--- a/17.md
+++ b/17.md
@@ -5,7 +5,7 @@ And the more code you write, the more unreadable that it becomes.
 
 ### Functions
 
-A function is a grouping of code, it performs a task, and obviously it's reusable.
+A function is a grouping of code, it **performs a task**, and obviously it's **reusable**.
 
 Some functions rely on parameters to perform their task.
 
