--- a/19.md
+++ b/19.md
@@ -1,5 +1,5 @@
 
-## Parameters
+### Parameters
 
 Functions with parameters expect to receive values.(these functions rely on parameters to perform their task)
 
@@ -7,13 +7,13 @@ Functions【without】parameters【do not expect】to receive values.
 
 Parameters are essentially just variables.
 
-## Arguments
+### Arguments
 
 A value that you pass into a function is known as an argument.
 
 **Parameters and Arguments makes functions completely reusable**!
 
-## Notice
+### Notice
 
 When a function defines parameters, then in order to call it,
 
