--- a/21.md
+++ b/21.md
@@ -1,11 +1,11 @@
 
-## Doc Comments
+### Doc Comments
 
 > Can be used to describe what a function does.
 
 **If you're working in a team of developers, you should have a document for every function.**
 
-## How to write Doc Comments ?
+### How to write Doc Comments ?
 
 See udemy
 
