--- a/22.md
+++ b/22.md
@@ -1,12 +1,12 @@
 
-## Scope
+### Scope
 
 > The scope of a variable determines its life span.
 
 The take home message is:
     You can never access a variable outside the scope that it was defined in.
 
-## Global Scope
+### Global Scope
 
 Please against using global variables,
 
