--- a/16.md
+++ b/16.md
@@ -1,4 +1,5 @@
-## Switch Statements
+
+### Switch Statements
 
 whenever you're comparing one variable against a long list of values, such as
 
@@ -16,7 +17,7 @@ if (weather.equals("sunny")) {
 
 you should avoid having a long list of `else if` statements, because this looks so disgusting !
 
-Instead, you should favor using a switch statement which was designed to compare one variable against a list of cases.
+Instead, you should favor using a `switch` statement which was designed to compare one variable against a list of cases.
 
 ```java
 switch (weather) {
@@ -29,11 +30,7 @@ switch (weather) {
 
 Then you might be asking that when to use `if` vs `switch` ?
 
----
-
 The only thing you can really do with `switch` is compare one variable against a list of values.
-
----
 
 `if` statement is more flexible so that suitable for complex conditions, such as when you need to compare multiple variables, they give you the flexibility to evaluate compound conditions using logical operators.
 
@@ -45,6 +42,5 @@ if (temperature >= 80 && humidity >= 60) {
 }
 ```
 
----
-
 See you in workbook 3.6 and 3.7
+
