--- a/20.md
+++ b/20.md
@@ -1,21 +1,21 @@
 
-## Return Values
+### Return Values
 
 > You can return values from a function.
 
-## Notice
+### Notice
 
 Bad practice: Your function handles the final result.
 
 Good practice: Your function return the final result.
 
-## Notice
+### Notice
 
 Whenever you specify a return type,
 
 you need to make sure that something gets returned no matter what gets passed in.
 
-## Terminate the runTime
+### Terminate the runTime
 
 ```java
 System.exit(0);
