--- a/26.md
+++ b/26.md
@@ -3,7 +3,7 @@ Arrays、2D_Arrays
 
 Looping Arrays、Updating Arrays
 
-## Arrays
+### Arrays
 
 Sometimes values can be closely related and creating one variable after another can be very messy such as below.
 
@@ -23,13 +23,13 @@ double[] prices = { 5.99, 6.99, 7.99, 8.99, 9.99 };
 
 Although an array can hold many values, all of them have to share the same type. 
 
-For example as below, `integers` points to an array of integer values.
+For example as below, `integers` **points to** an array of integer values.
 
 ```java
 int[] integers = { 1, 2, 3 };
 ```
 
-## Talk is cheap
+### Talk is cheap
 
 ```java
 String[] kindoms = { "qwe", "asd", "zxc" };
@@ -66,3 +66,4 @@ System.out.println(kingdoms[3]);
 ![20230729110015](https://aliyun-oss-lpj.oss-cn-qingdao.aliyuncs.com/images/by-clipboard/20230729110015.png)
 
 Java throws an ArrayIndexOutOfBoundsException, in essence, crashing our application, telling us that we have an error in our code —— "Index 3 is out of bounds"
+
