--- a/27.md
+++ b/27.md
@@ -1,4 +1,4 @@
-## Preparing to loop arrays
+### Preparing to loop arrays
 
 The `length` of an array indicates the number of items it contains.
 
@@ -9,7 +9,7 @@ System.out.println(items.length); // 3
 
 So we can use the `length` property to loop arrays.
 
-## Looping arrays
+### Looping arrays
 
 > Arrays and loops are like siblings.
 
@@ -33,7 +33,7 @@ numbers[5]
 int[] numbers = {22, 24, 26, 29, 30};
 ```
 
-#### for 循环
+### for 循环
 
 ```java
 // autoComplete a for loop in vscode: fori<ENTER>
