--- a/25.md
+++ b/25.md
@@ -1,14 +1,13 @@
-
 ### Nested Loops
 
 A nested loop is a loop inside of another loop.
 
-- useful when working with **2D arrays**.
+eg: useful when working with 2D arrays.
 
 ```java
 for (int i = 0; i < 3; i++) {
     for (int j = 0; j < 3; j++) {
-        System.out.println("Hello");
     }
 }
 ```
+
